--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 click==6.7
 Flask==0.12
+Flask-SQLAlchemy==2.1
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.9.3
 MarkupSafe==0.23
+SQLAlchemy==1.1.4
 Werkzeug==0.11.15
