--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
-alembic==0.8.9
+blinker==1.4
 click==6.7
 Flask==0.12
 Flask-PyMongo==0.4.1
-Flask-SQLAlchemy==2.1
+google-api-python-client==1.6.1
 gunicorn==19.6.0
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.9.3
 Mako==1.0.6
 MarkupSafe==0.23
+oauth2client==4.0.0
 psycopg2==2.6.2
 py==1.4.32
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
 pymongo==3.4.0
 pytest==3.0.5
 pytest-flask==0.10.0
 python-editor==1.0.3
 requests==2.12.4
-SQLAlchemy==1.1.4
+rsa==3.4.2
+six==1.10.0
+uritemplate==3.0.0
 Werkzeug==0.11.15
