--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ blinker==1.4
 click==6.7
 Flask==0.12
 Flask-PyMongo==0.4.1
+google-api-python-client==1.6.5
 gunicorn==19.6.0
 httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.9.3
 Mako==1.0.6
 MarkupSafe==0.23
+oauth2client==4.1.2
 psycopg2==2.6.2
 py==1.4.32
 pyasn1==0.1.9
